<resources>
    <string name="title_cards">Collection</string>

    <string name="collection_ups">Your collection is empty</string>
    <string name="cards_ups">Failed to load cards</string>

    //for available
    <string name="available_item_count">%d pcs</string>
    <string name="available_item_name_not_foil">%s, %s</string>
    <string name="available_item_name_foil">%s, %s, foil</string>

    //for available dialog
    <string name="available_dialog_title_edit">Editing</string>
    <string name="available_dialog_title_add">Adding</string>
    <string name="available_dialog_action_edit">Edit</string>
    <string name="available_dialog_action_add">Add</string>
    <string name="available_dialog_action_cancel">Cancel</string>
    <string name="available_dialog_field_language">Language</string>
    <string name="available_dialog_field_condition">Condition</string>
    <string name="available_dialog_field_count">Count</string>
    <string name="available_dialog_field_foil">Foil</string>
    <string name="available_dialog_field_error">Fill in this field</string>
    <string name="content_description_end_icon">Clear the field</string>
    <string name="foil_yes">yes</string>
    <string name="foil_no">no</string>
    <string name="snackbar_text">Such a map is already in your collection</string>
    <string name="snackbar_action">Rewrite</string>

    //Toolbar menu
    <string name="share">Share</string>
    <string name="clearList">Clear list</string>

    <string name="details_text_having_not">The card is missing from your collection</string>
    <string name="details_text_having">The card has been added to the collection. Now you can specify the number of such cards in your collection and their condition</string>
    <string name="available_select_all">Select all</string>
    <string name="available_clear">Clear selected</string>

    <string name="description_button_add">Add information about the card: its language, quantity and condition</string>
    <string name="description_select_language">Select the card language</string>
    <string name="description_select_condition">Select the card condition</string>
    <string name="description_select_foiled">Choose foil card or not</string>
    <string name="description_button_delete">Delete detailed card information</string>
</resources>